# lismi

./: README.md  pyproject.toml
src/lismi/: __main__.py  constants.py  printer.py  printers.py  struct.py  typer.py  util.py
src/lismi/words/: two-hundred.txt
