[project]
name = "lismi"
version = "0.1.0-alpha"
description = "A simple typing frontend for terminals."
authors = [
    { name = "myxi", email = "myxi@envs.net" }
]
dependencies = [
]
readme = "README.md"
requires-python = ">= 3.12"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/lismi"]
