[project]
name = "lismi"
version = "0.15.0-beta"
description = "A simple typing frontend for terminals."
authors = [
    { name = "myxi", email = "myxi@envs.net" }
]
dependencies = [
]
readme = "README.md"
requires-python = ">= 3.12"

[project.scripts]
lismi = "lismi.__main__:_main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/lismi"]
