[project]
name = "lismi"
version = "0.21.0-beta"
description = "A simple typing frontend for terminals."
authors = [
    { name = "myxi", email = "myxi@envs.net" }
]
dependencies = [
    "windows-curses==2.3.2;sys_platform=='win32'",
]
readme = "README.md"
requires-python = ">= 3.11"

[project.scripts]
lismi = "lismi.__main__:_main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/lismi"]
